# rawdata

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  clientpy.py  docker-compose.yml  go.mod  go.sum  main.go  nginx.conf  pyproject.toml
docs/: DETAILS.md
pkg/brain/: new.go  web.go
pkg/jump/: jump.go
pkg/store/: redis.go  sql.go
pkg/volume/: fileserver.go  new.go  node.go  schemas.go  volume.go  volume_test.go
