[tool.poetry]
name = "rawdata"
version = "0.1.0"
description = ""
authors = ["nuxion <nuxion@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
redis = "^3.5.3"
hiredis = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
